--- a/DigitalLearningSolutions.Web/Styles/shared/searchableElements/filter.scss
+++ b/DigitalLearningSolutions.Web/Styles/shared/searchableElements/filter.scss
@@ -56,8 +56,7 @@
 
 .filter-dropdown {
   @extend .input-with-submit-button;
-  display: flex;
-  flex: 1;
+  width: 100%;
 }
 
 .filter-submit {
